# TricoderMax

./: .gitignore  CONTRIBUTIONS.md  LICENSE_NOTICE.md  README.md  pyproject.toml  run_study.py
eval/: metrics.py  router_cases.csv  router_eval.py  run_eval.py  verification_eval.py
radiologist_agent/: README.md  __init__.py  __main__.py  cli.py  critical.py  llm.py  models.py  orchestrator.py  report.py
radiologist_agent/communication/: __init__.py  messaging.py  phone.py
radiologist_agent/data/: case_ctpa.json
radiologist_agent/data_sources/: __init__.py  bridge.py  chart.py  pacs.py  rad_model.py  tech_sheet.py
radiologist_agent/knowledge/: __init__.py  evidence.py  guidelines.py
report_cases/: case_ich_head.json  case_normal_head.json
scripts/: fetch_cq500.py  fetch_cq500_study.py  fetch_ich_weights.md  fetch_ich_weights.py  make_synthetic_study.py
src/: __init__.py  claude_layer.py  claude_tools.py  config.py  contract.py  dicom_io.py  logging_conf.py  orchestrator.py  pipeline.py  policy.py  registry.py  render_windows.py  router.py  sample_worklist.py  windowing.py
src/modules/: __init__.py  base.py  factory.py  hydrocephalus.py  ich.py  ich_convnext.py  ich_hf.py  ich_model.py  midline.py  midline_shift.py  mock.py
tests/: conftest.py  test_claude_layer.py  test_contract.py  test_dicom_io.py  test_eval.py  test_ich_module.py  test_midline.py  test_orchestrator.py  test_policy.py  test_router.py  test_server.py  test_windowing.py
ui/: app.py  server.py
ui/static/: index.html
